@@ -1,4 +1,5 @@
 2011-08-26  Xavier Perseguers  <xavier@typo3.org>
 
+	* [TASK] Add business logic to remember conversion was performed for a given extension
 	* [TASK] Import code from http://forge.typo3.org/projects/extension-egovapi/repository/revisions/51393/entry/trunk/class.ext_update.php
 	* [TASK] Create extension structure
